fixed information section not aligning center when displaying in column mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -308,6 +308,7 @@ footer h5 {
 
     #information-section ul {
         flex-direction: column;
+        align-items: center;
     }
 
     #information-section li {
